--- a/css/general.css
+++ b/css/general.css
@@ -18,7 +18,7 @@
         position: fixed;
         bottom: 20px;
         right: 20px;
-        background: #f4a261;
+        background: #d17a40;
         color: white;
         border: none;
         border-radius: 50%;
